changes in more button functionality of patient flow vertically

--- a/src/assets/css/virtual_hospital.css
+++ b/src/assets/css/virtual_hospital.css
@@ -9657,7 +9657,9 @@ button.crdoLghtBlu2 {
     border-bottom: none;
 }
 /* Added by Ankita */
-
+.setSpcSpecList{
+    margin: 10px
+}
 /* Start of Create a Task */
 .createTask {
     margin-left: 12px !important;
