--- a/src/assets/css/virtual_hospital.css
+++ b/src/assets/css/virtual_hospital.css
@@ -9990,7 +9990,7 @@ button.crdoLghtBlu2 {
 .flowProfilRght {
     padding-left: 10px;
     width: 75%;
-
+}
 .nwModelCloseBtn {
     text-align: right;
     /* margin-bottom: 4px; */
