Patient flow delete step issue change staff in vertical and horizontal both

--- a/src/assets/css/virtual_hospital.css
+++ b/src/assets/css/virtual_hospital.css
@@ -9756,6 +9756,9 @@ button.crdoLghtBlu2 {
     border-bottom: none;
 }
 /* Added by Ankita */
+.dtlCountRm a:last-child {
+    margin-left: 14px;
+}
 .setSpcSpecList{
     margin: 10px
 }
