--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -5684,7 +5684,6 @@ a.nxtpag {
     text-align: right;
 }
 .tablePagNum {
-    margin-top: 132px;
     padding: 20px 22px;
 }
 .nwPresCntnt {
@@ -6192,20 +6191,11 @@ img.addBlue {
     line-height: 20px;
 }
 img.openScnd {
-    height: 24px !important;
+    height: 24px;
     width: 24px;
     cursor: pointer;
     border-radius: 5px;
 }
-
-.bg-color-card {
-    background-color: #E5E6E6 !important ;
-}
-
-.cursor-pointer {
-    cursor: pointer;
-}
-
 .scndOptionIner ul li a {
     display: flex;
     align-items: flex-start;
@@ -7096,7 +7086,7 @@ a.vsblDots, a.conPainDots, a.bp_vsblDots, a.hideDots {
 }
 .MenuLeftDrkUpr .menuItems ul li a img {
     background-color: #4C5252;
-    border: none !important;
+    /* border: none !important; */
 }
 .MenuLeftDrkUpr a.menuActv img {
     background: #00ABAF !important;
@@ -11992,10 +11982,6 @@ span.srchMobIcon img {
     display: inline-block !important;
     margin-top: 0px !important;
   }
-  .profilMenuList {
-    min-width: 130px !important;
-    padding: 8px 10px !important;
-  }
   .descpInerRght2 {
     margin-left: 0px !important;
   }
@@ -12982,7 +12968,7 @@ a.addNewPlus img {
     border-radius: 8px;
 }
 img.academyDots {
-    border: 1px solid #96969685;
+    border: 1px solid #969696f2;
 }
 .archvSrchInput input {
     border-radius: 12px;
@@ -13075,6 +13061,7 @@ a.academy_ul ul {
     top: 23px;
     min-width: 140px;
     z-index: 111;
+    width: 100%;
 }
 a.academy_ul {
     position: relative;
@@ -13089,6 +13076,7 @@ a.academy_ul ul li span {
 a.academy_ul ul li {
     list-style-type: none;
     margin-bottom: 10px;
+    text-align: left;
 }
 a.academy_ul ul li:last-child {
     margin-bottom: 0px !important
@@ -13567,7 +13555,7 @@ iframe.stripe_checkout_app {
     background-color: #fff !important;
 }
 .HospitalAdd .passInst {
-    position: relative!important;
+    position: relative !important;
     top: unset !important;
     right: 0px !important;
 }
@@ -14249,7 +14237,7 @@ ul.insuranceHint1 li {
 .darkTheme .react-calendar {
     background: none !important;
 }
-.darkTheme h3,.darkTheme h4,  .css-1uccc91-singleValue, .darkTheme .srvcTagsLoc a {
+.darkTheme h3,.darkTheme h4, .darkTheme .srvcTagsLoc a {
     color: #BFC1C1 !important;
 }
 .darkTheme .trigerAction ul li {
@@ -15927,7 +15915,10 @@ a.clsSltCal {
     background-color: #404646 !important;
     color: #BFC1C1 !important;
 }
-.nwPresModel, .darkTheme, .opinBoxModel, .editBoxModel, .addScrollBar{
+.darkTheme .rrSysto #react-select-2-input {
+    background-color: #192020 !important;
+}
+.nwPresModel, .opinBoxModel, .editBoxModel, .addScrollBar{
     overflow-y: auto !important;
 }
 td.dotsImgColor span.revwRed{
@@ -15935,9 +15926,6 @@ td.dotsImgColor span.revwRed{
 }
 td.dotsImgColor.pivoted{
     padding: 0px;
-}
-.profilMenuList ul li a .react-toggle{
-    margin-top: 12px !important;
 }
 .presOpinionIner .responsiveTable td:nth-child(2){
     display: flex;
@@ -16401,7 +16389,7 @@ select:-webkit-autofill:focus {
   }
 }
 
-@media screen and (max-width: 40em){
+/* @media screen and (max-width: 40em){
     a.openScndhrf{
       text-align: left !important;
     }
@@ -16409,7 +16397,8 @@ select:-webkit-autofill:focus {
       right: initial !important;
       left: 0px !important;
     }
-}
+} */
+
 @media (max-width: 1280px){
     .officeVstRght {
         text-align: left !important;
@@ -16478,7 +16467,7 @@ select:-webkit-autofill:focus {
     font-weight: 600;
     letter-spacing: 0;
     line-height: 32px;
-    font-family: 'Mulish', sans-serif;
+    font-family: Muli;
     margin-bottom: 12px;
 }
 .creatDetail {
@@ -16486,7 +16475,7 @@ select:-webkit-autofill:focus {
 }
 .creatInfoIner label {
     color: #404646;
-    font-family: 'Mulish', sans-serif;
+    font-family: Muli;
     font-size: 12px;
     font-weight: 600;
     letter-spacing: 0;
@@ -16500,7 +16489,7 @@ select:-webkit-autofill:focus {
     outline: none;
     width: 100%;
     color: #000808;
-    font-family: 'Mulish', sans-serif;
+    font-family: Muli;
     font-size: 14px;
     font-weight: 600;
     letter-spacing: 0;
@@ -16517,7 +16506,7 @@ select:-webkit-autofill:focus {
     padding: 7px 6px;
     outline: none;
     color: #000808;
-    font-family: 'Mulish', sans-serif;
+    font-family: Muli;
     font-size: 14px;
     font-weight: 600;
     letter-spacing: 0;
@@ -16542,7 +16531,7 @@ select:-webkit-autofill:focus {
     font-weight: 600;
     letter-spacing: 0;
     line-height: 18px;
-    font-family: 'Mulish', sans-serif;
+    font-family: Muli;
 }
 .instuteSrch div {
     margin: 0px;
@@ -16555,7 +16544,7 @@ select:-webkit-autofill:focus {
     outline: none;
     width: 100%;
     color: #000808;
-    font-family: 'Mulish', sans-serif;
+    font-family: Muli;
     font-size: 14px;
     font-weight: 600;
     letter-spacing: 0;
@@ -16584,7 +16573,7 @@ select:-webkit-autofill:focus {
     padding: 9px 12px;
 }
 .hideTask .MuiFormControlLabel-label {
-    font-family: 'Mulish', sans-serif;
+    font-family: Muli;
     color: #404646;
     font-size: 14px;
     font-weight: 600;
@@ -16634,7 +16623,7 @@ select:-webkit-autofill:focus {
 .saveTasks button {
     background-color: rgb(0 171 175);
     color: #ffffff;
-    font-family: 'Mulish', sans-serif;
+    font-family: Muli;
     font-size: 16px;
     font-weight: 600;
     letter-spacing: 0;
@@ -16647,6 +16636,7 @@ select:-webkit-autofill:focus {
 .addTime button {
     height: 44px;
     width: 78px;
+    max-width: 78px !important;
     border: 1px solid #BFC1C1;
     border-radius: 4px;
     background-color: #FFFFFF;
@@ -16657,7 +16647,7 @@ select:-webkit-autofill:focus {
     font-weight: 600;
     letter-spacing: 0;
     line-height: 18px;
-    font-family: 'Mulish', sans-serif;
+    font-family: Muli;
     text-transform: initial;
     padding: 0px;
 }
@@ -16666,7 +16656,7 @@ select:-webkit-autofill:focus {
 }
 .spcMagnt h1 {
     color: #000808;
-    font-family: 'Mulish', sans-serif;
+    font-family: Muli;
     font-size: 28px;
     font-weight: bold;
     letter-spacing: 0;
@@ -16779,7 +16769,7 @@ select:-webkit-autofill:focus {
     font-weight: 600;
     letter-spacing: 0;
     line-height: 18px;
-    font-family: 'Mulish', sans-serif;
+    font-family: Muli;
     margin-bottom: 18px;
 }
 .sympMrktSpc {
@@ -16844,7 +16834,7 @@ select:-webkit-autofill:focus {
     letter-spacing: 0;
     line-height: 18px;
     text-align: center;
-    font-family: 'Mulish', sans-serif;
+    font-family: Muli;
     height: 34px;
     padding: 0px 4px;
     min-width: 42px;
@@ -16935,7 +16925,7 @@ select:-webkit-autofill:focus {
     letter-spacing: 0;
     line-height: 18px;
     text-align: center;
-    font-family: 'Mulish', sans-serif;
+    font-family: Muli;
     height: 34px;
     width: 42px;
     border: 1px solid #F2F2F2;
@@ -17011,7 +17001,7 @@ ul.duringCovid li {
     font-weight: 600;
     letter-spacing: 0;
     line-height: 16px;
-    font-family: 'Mulish', sans-serif;
+    font-family: Muli;
     margin-right: 12px;
     margin-top: 12px;
 }
@@ -17206,11 +17196,16 @@ ul.duringCovid li:last-child {
 .darkTheme .enrgyLbl a,.darkTheme .fatiqueQues a, .darkTheme .symptomsType a {
     background-color: #363636;
 }
-.form-box{
-    margin-bottom:15px !important;
+.spcMgntH1 h1 {
+    color: #000808;
+    font-size: 28px;
+    font-weight: bold;
+    letter-spacing: 0;
+    line-height: 40px;
+}
+.academy_ul.stepTdotupper ul div {
     width: 100% !important;
 }
-
-.h-500{
-    height: 500px !important;
+.academy_ul.stepTdotupper .movHeadLft {
+    text-align: left !important;
 }
