--- a/src/assets/css/style_log.css
+++ b/src/assets/css/style_log.css
@@ -255,7 +255,6 @@ img.passArow {
     outline: none !important;
     margin-bottom: 18px;
 }
-
 .acType {
     margin-left: 5px;
 }
@@ -263,9 +262,9 @@ img.passArow {
     list-style-type: none;
 }
 .ProfSelect a.dropdown-toggle.nav-link {
-    background-color: #00abaf!important;
-    color: #fff!important;
-    font-weight: 600!important;
+    background-color: #00abaf !important;
+    color: #fff !important;
+    font-weight: 600 !important;
 }
 .acType a.dropdown-toggle.nav-link {
     border-radius: 7px;
@@ -514,9 +513,9 @@ img.link_docs {
 }
 .ProfSelect a.dropdown-toggle.nav-link
 {
-    background-color: #00ABAF!important;
-    color: #fff!important;
-    font-weight: 600!important;
+    background-color: #00ABAF !important;
+    color: #fff !important;
+    font-weight: 600 !important;
 }
 .mobileReg{
     border-radius: 7px!important;
@@ -596,8 +595,7 @@ button:focus {
 ul.flag-select__options li {
     padding: 7px 9px !important;
 }
-.spaceforplus
-{
+.spaceforplus{
     margin-bottom:10px!important;
 }
 .widthProfession {
