add custom service

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -17248,4 +17248,16 @@ ul.duringCovid li:last-child {
     padding: 0px;
 }
 
+.borderStyle {
+    border-style: solid;
+    border-width: thin;
+}
+
+.errorMsg {
+    color: red;
+    text-align: center;
+    font-size: 18px;
+    padding-bottom: 10px;
+}
+
 /* Done by naveen end here */
