--- a/src/assets/css/virtual_hospital.css
+++ b/src/assets/css/virtual_hospital.css
@@ -9775,6 +9775,12 @@ button.crdoLghtBlu2 {
     border-bottom: none;
 }
 /* Added by Ankita */
+.serchInput {
+    display: inline;
+    margin: auto 9px;
+    border-radius: 7px;
+    padding: 8px;
+}
 .recaptchaMargin{
     margin-top:12px;
     margin-bottom: 12px;
